--- a/src/Styles/Styles.css
+++ b/src/Styles/Styles.css
@@ -27,13 +27,19 @@ html {
   padding: 0 20px;
 }
 .hero {
+  /* background-size: cover; */
+}
+.hero__bg {
   background-image: url("/images/heroPc.png");
   background-repeat: no-repeat;
   background-position: right bottom;
-  /* background-size: cover; */
+}
+.hero__blur {
+  /* bottom: 0;
+  left: 0; */
 }
 @media screen and (max-width: 1024px) {
-  .hero {
+  .hero__bg {
     background-image: url("/images/mobile_heroPc.png");
     background-position: calc(100% + 70px) 100%;
   }
@@ -56,3 +62,14 @@ html {
   min-height: 438px;
   padding: 54px 34px 34px;
 }
+/* .hero__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: cover;
+  z-index: -1;
+} */
